dev: removing claudecode agent definitions and updating project specific instructions for claudcode.